--- a/html/Comunidad.html
+++ b/html/Comunidad.html
@@ -119,8 +119,7 @@
                         </a>
                         <br>
                         <a href="#" class="no-underline" id = "izq">
-                            <i class="bi bi-archive-fill"></i>
-                            Borradores
+                            <i class="bi bi-archive-fill"></i> Borradores
                         </a>
                         </div>
                     </div>
@@ -153,8 +152,8 @@
                                 <span class="input-group-text"> 
                                     <i class="bi bi-geo-fill"></i> Agrega la ubicación
                                 </span>
-                                <input type="text" id="tagsInput1" class="form-control" placeholder="País">
-                                <input type="text" id="tagsInput2" class="form-control" placeholder="Ciudad" >
+                                <input type="text" id="location-Country" class="form-control" placeholder="País">
+                                <input type="text" id="location-City" class="form-control" placeholder="Ciudad" >
                             </div>
 
                             <div class="form-check form-switch mb-3">
@@ -210,15 +209,14 @@
 
                             <div class="d-grid">
                                 <button id="post-btn" type="button" class="btn btn-primary" onclick="addPost()">
-                                    <i class="bi bi-send"></i>
-                                    Publicar </button>
+                                    Publicar
+                                </button>
                             </div>
-
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                                <button class="btn btn-primary" id="button-1">
+                                <button class="btn btn-primary" type="button-1">
                                     <i class="bi bi-archive"></i>
                                     Borrador</button>
-                                <button class="btn btn-primary" id="button-1">
+                                <button class="btn btn-primary" type="button-1">
                                     <i class="bi bi-trash3"></i>
                                     Descartar</button>
                             </div>
