--- a/html/Comunidad.html
+++ b/html/Comunidad.html
@@ -94,9 +94,9 @@
                             </div>
 
                             <div class="btn-group">
-                                <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <button class="btn btn-secondary btn-sm dropdown-toggle" id= "dropFilter" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     <i class="bi bi-filter-square"></i>
-                                    Filtro avanzado
+                                    Filtros avanzado
                                 </button>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="#">Reseña</a></li>
@@ -140,20 +140,13 @@
                             <div class="mb-3">
                                 <textarea id="postContent" class="form-control" rows="3" placeholder="¿Deseas compartir algo hoy?"></textarea>
                             </div>
-                            <!-- validar por pais/ciudad/americalatina y su respectiva alerta -->
-                            <!-- <div class="mb-3">
-                                <a href="#" id="postTags" class="no-underline me-3" onclick="showTextarea()">
-                                    <img src="../public/insumos/mode_of_travel.svg" alt="Adjuntar ubicación" height="25px"> Agrega la ubicación
-                                </a>
-                                <textarea id="rute-add" class="form-control mt-2 addRute" rows="1" placeholder="Ciudad, País" style="display: none;"></textarea>
-                            </div> --> 
 
                             <div class="input-group mb-3" id = "locationPin">
                                 <span class="input-group-text"> 
                                     <i class="bi bi-geo-fill"></i> Agrega la ubicación
                                 </span>
-                                <input type="text" id="location-Country" class="form-control" placeholder="País">
-                                <input type="text" id="location-City" class="form-control" placeholder="Ciudad" >
+                                <input type="text" id="location-Country" class="form-control" placeholder="País" oninput="validateLocation()">
+                                <input type="text" id="location-City" class="form-control" placeholder="Ciudad" oninput="validateLocation()" >
                             </div>
 
                             <div class="form-check form-switch mb-3">
@@ -182,7 +175,7 @@
                                 <select id="postType" class="form-select">
                                     <option selected>Tipo de publicación:</option>
                                     <option class = "selectPost" value="1">Reseña</option>
-                                    <option class = "selectPost" value="2">Recomendaciones</option>
+                                    <option class = "selectPost" value="2" >Recomendación</option>
                                     <option class = "selectPost" value="3">Advertencia de seguridad</option>
                                 </select>
                             </div>
@@ -199,7 +192,7 @@
                                 </div>
                             </div>
 
-                            <div class="input-group mb-3" id ="tagsTravel">
+                            <div class="input-group mb-3" id ="tagsTravel" >
                                 <span class="input-group-text"> 
                                     <i class="bi bi-tags"></i> Etiquetas
                                 </span>
@@ -214,10 +207,10 @@
                                 </button>
                             </div>
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                                <button class="btn btn-primary" type="button-1">
+                                <button class="btn btn-outline-primary btn-sm" type="button-1" id = "bt-Borr">
                                     <i class="bi bi-archive"></i>
                                     Borrador</button>
-                                <button class="btn btn-primary" type="button-1" onclick="limpiarFormulario()">
+                                <button class="btn btn-outline-primary btn-sm" type="button-1" id="bt-Des" onclick="limpiarFormulario()">
                                     <i class="bi bi-trash3"></i>
                                     Descartar</button>
                             </div>
