--- a/html/Comunidad.html
+++ b/html/Comunidad.html
@@ -131,10 +131,10 @@
                     <form>
                         <div class="publish-container bg-white p-4 rounded shadow-sm mb-4">
                             <div class="user-profile d-flex align-items-center mb-3">
-                                <img src="../public/insumos/mujer.jpg" alt="Perfil" class="rounded-circle me-3" width="50">
+                                <img src="../public/insumos/mujer2.jpg" alt="Perfil" class="rounded-circle me-3" width="50">
                                 <div>
-                                    <p class="mb-0">Hola, Sandra.</p>
-                                    <p class="mb-0">@traveler01</p>
+                                    <p class="mb-0">Hola, Laura Vargas.</p>
+                                    <p class="mb-0">@traveler11</p>
                                 </div>
                             </div>
                             <div class="mb-3">
