--- a/html/Home.html
+++ b/html/Home.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!--Link a nuestros archivos de estilos-->
-  <link rel="stylesheet" href="../css/Home-Carrousel.css">
-
-
-    <!--Link a nuestros archivos de estilos-->
-  <link rel="stylesheet" href="../css/Home-Carrousel.css">
+  <link rel="stylesheet" href="/css/Global.css">
+  <link rel="stylesheet" href="/css/Home-Carrousel.css">
 
 
     <!--Links de Bootstrap-->
@@ -18,6 +15,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!--Colocamos los Estilos-->
     <link rel="icon" href="../public/Favicon.png">
+
+    <!--Link a todas las fuentes de Google y fuentes-->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+   <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="../css/Global.css">
+   <link rel="stylesheet" href="../css/Contacto.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <script src="https://kit.fontawesome.com/060659d31d.js" crossorigin="anonymous"></script>
     <title>Home</title>
 </head>
 <body>
@@ -193,7 +202,7 @@
     </div>
   
     <!-- Footer -->
-    <footer id="FooterBackground" class="text-center text-lg-start text-white bg-light mt-auto py-3">
+    <footer class="footer text-center text-lg-start text-white bg-light mt-auto py-3">
       <!-- Section: Social media -->
       <section class="d-flex justify-content-between p-4" id="FooterRibbon">
         <!-- Left -->
@@ -225,7 +234,7 @@
       <!-- Section: Social media -->
   
       <!-- Section: Links  -->
-      <section id="FooterBackground">
+      <section class="footer">
         <div class="container text-center text-md-start mt-5">
           <!-- Grid row -->
           <div class="row mt-3">
@@ -282,11 +291,17 @@
       </div>
     </footer>
   
+
     <!-- Script a JQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <!-- Script a Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     
     <!-- Script al Js -->
     <script src="/js/Home-Carrousel.js"></script>
